macOS: Fix slowness while navigating text with hotkeys.

A recent CL modified hotkey lookup to call -[NSMenuDelegate menuNeedsUpdate:] on
every submenu's delegate prior to looking up the hotkey. The delegate of the
"Share" menu has a particularly slow implementation of this method.

This CL modifies the logic to just call -[AppController
updateMenuItemKeyEquivalents], which updates the relevant NSMenuItems.

Bug: 851260
Change-Id: If1529404a19a41b4c4085edbbb57be688881e9dc
Reviewed-on: https://chromium-review.googlesource.com/1096082
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566441}
Former-commit-id: 22be209b487b5f78c85fa5d80daca2ce6a651186