chrome/browser/app_controller_mac.h
@@ -169,6 +169,13 @@ class ScopedKeepAlive;
 // the original profile and never incognito.
 - (void)windowChangedToProfile:(Profile*)profile;
 
+// Certain NSMenuItems [Close Tab and Close Window] have different
+// keyEquivalents depending on context. This must be invoked in two locations:
+//   * In menuNeedsUpdate:, which is called prior to showing the NSMenu.
+//   * In CommandDispatcher, which independently searches for a matching
+//     keyEquivalent.
+- (void)updateMenuItemKeyEquivalents;
+
 @end
 
 #endif  // __OBJC__
